--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
         </a>
         <div class="dropdown-menu linear-gradient1" aria-labelledby="navbarDropdown">
           <a class="dropdown-item" href="#">Ayush</a>
-          <a class="dropdown-item" href="#">xxxxx-xxxxx</a>
+          <a class="dropdown-item" href="#">9931695258</a>
           <div class="dropdown-divider"></div>
           <a class="dropdown-item" href="#">Animesh</a>
-          <a class="dropdown-item" href="#">xxxxx-xxxxx</a>
+          <a class="dropdown-item" href="#">8918406908</a>
         </div>
       </li>
       
@@ -69,7 +69,7 @@
   
   <hr class="my-4">
   
-  <a class="btn btn-dark btn-lg" href="#" role="button"><i class="fab fa-staylinked"></i> Advertise and Save the World</a>
+  <a style = "margin-left: 25%;" class="btn btn-dark btn-lg" href="#" role="button"><i class="fab fa-staylinked"></i> Advertise and Save the World</a>
 </div>
 
 </div>
